app/src/generated/java/rabalais/regex2english/regex2englishParser.java
// Generated from regex2english.g4 by ANTLR 4.9.2
package rabalais.regex2english;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class regex2englishParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, WILDCARD=33, CARET=34, DIGIT=35, NON_DIGIT=36, HORIZONTAL_WHITESPACE=37, 
		NON_HORIZONTAL_WHITESPACE=38, WHITESPACE=39, NON_WHITESPACE=40, VERTICAL_WHITESPACE=41, 
		NON_VERTICAL_WHITESPACE=42, WORD=43, NON_WORD=44, LEFT_QUOTE=45, RIGHT_QUOTE=46, 
		LETTER_RANGE=47, NUMBER_RANGE=48, DOUBLE_AMPERSAND=49, PIPE=50, PLUS_ESCAPED=51, 
		LBRACE_ESCAPED=52, PIPE_ESCAPED=53, BACKSLASH_ESCAPED=54, LPAREN_ESCAPED=55, 
		RPAREN_ESCAPED=56, LBRACKET_ESCAPED=57, RBRACKET_ESCAPED=58, DOT_ESCAPED=59, 
		CARET_ESCAPED=60, QMARK_ESCAPED=61, ASTERISK_ESCAPED=62, DOLLAR_SIGN_ESCAPED=63, 
		HYPHEN_ESCAPED=64, N_OCCURRANCES=65, MAX_QUANTIFIER=66, MIN_QUANTIFIER=67, 
		RANGE_QUANTIFIER=68, PLUS=69, ASTERISK=70, QMARK=71, LBRACKET=72, RBRACKET=73, 
		LPAREN=74, RPAREN=75, BACKSLASH=76, OCTAL_1=77, OCTAL_2=78, OCTAL_3=79, 
		HEXA_2=80, HEXA_4=81, HEXA_6=82, CARRIAGE_RETURN=83, TAB=84, FORM_FEED=85, 
		ALERT=86, ESC=87, DOLLAR_SIGN=88, WORD_BOUNDARY=89, NON_WORD_BOUNDARY=90, 
		INPUT_START=91, END_OF_MATCH=92, INPUT_END=93, INPUT_END_INC_NEWLINE=94, 
		LINEBREAK_MATCHER=95, LETTER=96, EXTRA_LETTER_ALLOWED_INSIDE=97, INLINEMODIFIER=98, 
		LOCAL_INLINE_MODIFIER_TEMPLATE=99, N_TH_CAPTURE_GROUP=100, NAMED_CAPTURE_GROUP_MATCH=101, 
		NAMED_CAPTURE_GROUP_NAME=102;
	public static final int
		RULE_start = 0, RULE_expr = 1, RULE_exprHelper = 2, RULE_characterClassContent = 3, 
		RULE_characterClassContentHelper = 4, RULE_escapedToLiteralInsideCharClass = 5, 
		RULE_escapedToLiteralOutsideCharClass = 6, RULE_quote = 7, RULE_zeroWidthAssertions = 8, 
		RULE_captureGroup = 9, RULE_group = 10, RULE_range = 11, RULE_predefinedCharacterClass = 12, 
		RULE_characterClass = 13, RULE_backReference = 14, RULE_boundaryMatcherStart = 15, 
		RULE_wordBoundary = 16, RULE_nonWordBoundary = 17, RULE_inputStart = 18, 
		RULE_endOfMatch = 19, RULE_letter = 20, RULE_concatenation = 21, RULE_quantifier = 22, 
		RULE_boundaryMatcherEnd = 23, RULE_endOfInputExceptFinalTerminator = 24, 
		RULE_endOfOnput = 25, RULE_or = 26, RULE_escapedFromLiteral = 27, RULE_inlineModifier = 28, 
		RULE_namedCaptureGroup = 29, RULE_nonCaptureGroup = 30, RULE_independentNonCapturingGroup = 31, 
		RULE_zeroWidthPositiveLookAhead = 32, RULE_zeroWidthNegativeLookAhead = 33, 
		RULE_zeroWidthPositiveLookBehind = 34, RULE_zeroWidthNegativeLookBehind = 35, 
		RULE_posix = 36, RULE_javalangCharacterClass = 37, RULE_unicodeScriptClass = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expr", "exprHelper", "characterClassContent", "characterClassContentHelper", 
			"escapedToLiteralInsideCharClass", "escapedToLiteralOutsideCharClass", 
			"quote", "zeroWidthAssertions", "captureGroup", "group", "range", "predefinedCharacterClass", 
			"characterClass", "backReference", "boundaryMatcherStart", "wordBoundary", 
			"nonWordBoundary", "inputStart", "endOfMatch", "letter", "concatenation", 
			"quantifier", "boundaryMatcherEnd", "endOfInputExceptFinalTerminator", 
			"endOfOnput", "or", "escapedFromLiteral", "inlineModifier", "namedCaptureGroup", 
			"nonCaptureGroup", "independentNonCapturingGroup", "zeroWidthPositiveLookAhead", 
			"zeroWidthNegativeLookAhead", "zeroWidthPositiveLookBehind", "zeroWidthNegativeLookBehind", 
			"posix", "javalangCharacterClass", "unicodeScriptClass"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<?'", "'>'", "'?:'", "'?>'", "'?='", "'?!'", "'?<='", "'?<!'", 
			"'\\p{Lower}'", "'\\p{Upper}'", "'\\p{ASCII}'", "'\\p{Alpha}'", "'\\p{Digit}'", 
			"'\\p{Alnum}'", "'\\p{Punct}'", "'\\p{Graph}'", "'\\p{Print}'", "'\\p{Blank}'", 
			"'\\p{Cntrl}'", "'\\p{XDigit}'", "'\\p{Space}'", "'\\p{javaLowerCase}'", 
			"'\\p{javaUpperCase}'", "'\\p{javaWhitespace}'", "'\\p{javaMirrored}'", 
			"'\\p{IsLatin}'", "'\\p{InGreek}'", "'\\p{Lu}'", "'\\p{IsAlphabetic}'", 
			"'\\p{Sc}'", "'\\P{InGreek}'", "'[\\p{L}&&[^\\p{Lu}]]'", "'.'", "'^'", 
			"'\\d'", "'\\D'", "'\\h'", "'\\H'", "'\\s'", "'\\S'", "'\\v'", "'\\V'", 
			"'\\w'", "'\\W'", "'\\Q'", "'\\E'", null, null, "'&&'", "'|'", "'\\+'", 
			"'\\{'", "'\\|'", "'\\\\'", "'\\('", "'\\)'", "'\\]'", "'\\['", "'\\.'", 
			"'\\^'", "'\\?'", "'\\*'", "'\\$'", "'\\-'", null, null, null, null, 
			"'+'", "'*'", "'?'", "'['", "']'", "'('", "')'", "'\\'", null, null, 
			null, null, null, null, "'\\r'", "'\\t'", "'\\f'", "'\\a'", "'\\e'", 
			"'$'", "'\\b'", "'\\B'", "'\\A'", "'\\G'", "'\\z'", "'\\Z'", "'\\R'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "WILDCARD", "CARET", 
			"DIGIT", "NON_DIGIT", "HORIZONTAL_WHITESPACE", "NON_HORIZONTAL_WHITESPACE", 
			"WHITESPACE", "NON_WHITESPACE", "VERTICAL_WHITESPACE", "NON_VERTICAL_WHITESPACE", 
			"WORD", "NON_WORD", "LEFT_QUOTE", "RIGHT_QUOTE", "LETTER_RANGE", "NUMBER_RANGE", 
			"DOUBLE_AMPERSAND", "PIPE", "PLUS_ESCAPED", "LBRACE_ESCAPED", "PIPE_ESCAPED", 
			"BACKSLASH_ESCAPED", "LPAREN_ESCAPED", "RPAREN_ESCAPED", "LBRACKET_ESCAPED", 
			"RBRACKET_ESCAPED", "DOT_ESCAPED", "CARET_ESCAPED", "QMARK_ESCAPED", 
			"ASTERISK_ESCAPED", "DOLLAR_SIGN_ESCAPED", "HYPHEN_ESCAPED", "N_OCCURRANCES", 
			"MAX_QUANTIFIER", "MIN_QUANTIFIER", "RANGE_QUANTIFIER", "PLUS", "ASTERISK", 
			"QMARK", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", "BACKSLASH", "OCTAL_1", 
			"OCTAL_2", "OCTAL_3", "HEXA_2", "HEXA_4", "HEXA_6", "CARRIAGE_RETURN", 
			"TAB", "FORM_FEED", "ALERT", "ESC", "DOLLAR_SIGN", "WORD_BOUNDARY", "NON_WORD_BOUNDARY", 
			"INPUT_START", "END_OF_MATCH", "INPUT_END", "INPUT_END_INC_NEWLINE", 
			"LINEBREAK_MATCHER", "LETTER", "EXTRA_LETTER_ALLOWED_INSIDE", "INLINEMODIFIER", 
			"LOCAL_INLINE_MODIFIER_TEMPLATE", "N_TH_CAPTURE_GROUP", "NAMED_CAPTURE_GROUP_MATCH", 
			"NAMED_CAPTURE_GROUP_NAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "regex2english.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public regex2englishParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regex2englishVisitor ) return ((regex2englishVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public EscapedToLiteralOutsideCharClassContext escapedToLiteralOutsideCharClass() {
			return getRuleContext(EscapedToLiteralOutsideCharClassContext.class,0);
		}
		public QuoteContext quote() {
			return getRuleContext(QuoteContext.class,0);
		}
		public ZeroWidthAssertionsContext zeroWidthAssertions() {
			return getRuleContext(ZeroWidthAssertionsContext.class,0);
		}
		public InlineModifierContext inlineModifier() {
			return getRuleContext(InlineModifierContext.class,0);
		}
		public CaptureGroupContext captureGroup() {
			return getRuleContext(CaptureGroupContext.class,0);
		}
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public EscapedFromLiteralContext escapedFromLiteral() {
			return getRuleContext(EscapedFromLiteralContext.class,0);
		}
		public CharacterClassContext characterClass() {
			return getRuleContext(CharacterClassContext.class,0);
		}
		public BackReferenceContext backReference() {
			return getRuleContext(BackReferenceContext.class,0);
		}
		public BoundaryMatcherStartContext boundaryMatcherStart() {
			return getRuleContext(BoundaryMatcherStartContext.class,0);
		}
		public WordBoundaryContext wordBoundary() {
			return getRuleContext(WordBoundaryContext.class,0);
		}
		public NonWordBoundaryContext nonWordBoundary() {
			return getRuleContext(NonWordBoundaryContext.class,0);
		}
		public InputStartContext inputStart() {
			return getRuleContext(InputStartContext.class,0);
		}
		public EndOfMatchContext endOfMatch() {
			return getRuleContext(EndOfMatchContext.class,0);
		}
		public LetterContext letter() {
			return getRuleContext(LetterContext.class,0);
		}
		public ExprHelperContext exprHelper() {
			return getRuleContext(ExprHelperContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regex2englishVisitor ) return ((regex2englishVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(80);
				escapedToLiteralOutsideCharClass();
				}
				break;
			case 2:
				{
				setState(81);
				quote();
				}
				break;
			case 3:
				{
				setState(82);
				zeroWidthAssertions();
				}
				break;
			case 4:
				{
				setState(83);
				inlineModifier();
				}
				break;
			case 5:
				{
				setState(84);
				captureGroup();
				}
				break;
			case 6:
				{
				setState(85);
				group();
				}
				break;
			case 7:
				{
				setState(86);
				escapedFromLiteral();
				}
				break;
			case 8:
				{
				setState(87);
				characterClass();
				}
				break;
			case 9:
				{
				setState(88);
				backReference();
				}
				break;
			case 10:
				{
				setState(89);
				boundaryMatcherStart();
				}
				break;
			case 11:
				{
				setState(90);
				wordBoundary();
				}
				break;
			case 12:
				{
				setState(91);
				nonWordBoundary();
				}
				break;
			case 13:
				{
				setState(92);
				inputStart();
				}
				break;
			case 14:
				{
				setState(93);
				endOfMatch();
				}
				break;
			case 15:
				{
				setState(94);
				letter();
				}
				break;
			}
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(97);
				exprHelper();
				}
				break;
			case 2:
				{
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprHelperContext extends ParserRuleContext {
		public ConcatenationContext concatenation() {
			return getRuleContext(ConcatenationContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public BoundaryMatcherEndContext boundaryMatcherEnd() {
			return getRuleContext(BoundaryMatcherEndContext.class,0);
		}
		public EndOfInputExceptFinalTerminatorContext endOfInputExceptFinalTerminator() {
			return getRuleContext(EndOfInputExceptFinalTerminatorContext.class,0);
		}
		public EndOfOnputContext endOfOnput() {
			return getRuleContext(EndOfOnputContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public ExprHelperContext exprHelper() {
			return getRuleContext(ExprHelperContext.class,0);
		}
		public ExprHelperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprHelper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regex2englishVisitor ) return ((regex2englishVisitor<? extends T>)visitor).visitExprHelper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprHelperContext exprHelper() throws RecognitionException {
		ExprHelperContext _localctx = new ExprHelperContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exprHelper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(101);
				concatenation();
				}
				break;
			case 2:
				{
				setState(102);
				quantifier();
				}
				break;
			case 3:
				{
				setState(103);
				boundaryMatcherEnd();
				}
				break;
			case 4:
				{
				setState(104);
				endOfInputExceptFinalTerminator();
				}
				break;
			case 5:
				{
				setState(105);
				endOfOnput();
				}
				break;
			case 6:
				{
				setState(106);
				or();
				}
				break;
			}
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(109);
				exprHelper();
				}
				break;
			case 2:
				{
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharacterClassContentContext extends ParserRuleContext {
		public List<TerminalNode> CARET() { return getTokens(regex2englishParser.CARET); }
		public TerminalNode CARET(int i) {
			return getToken(regex2englishParser.CARET, i);
		}
		public CharacterClassContentContext characterClassContent() {
			return getRuleContext(CharacterClassContentContext.class,0);
		}
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public EscapedToLiteralInsideCharClassContext escapedToLiteralInsideCharClass() {
			return getRuleContext(EscapedToLiteralInsideCharClassContext.class,0);
		}
		public PredefinedCharacterClassContext predefinedCharacterClass() {
			return getRuleContext(PredefinedCharacterClassContext.class,0);
		}
		public PosixContext posix() {
			return getRuleContext(PosixContext.class,0);
		}
		public JavalangCharacterClassContext javalangCharacterClass() {
			return getRuleContext(JavalangCharacterClassContext.class,0);
		}
		public UnicodeScriptClassContext unicodeScriptClass() {
			return getRuleContext(UnicodeScriptClassContext.class,0);
		}
		public CharacterClassContentHelperContext characterClassContentHelper() {
			return getRuleContext(CharacterClassContentHelperContext.class,0);
		}
		public List<TerminalNode> LETTER_RANGE() { return getTokens(regex2englishParser.LETTER_RANGE); }
		public TerminalNode LETTER_RANGE(int i) {
			return getToken(regex2englishParser.LETTER_RANGE, i);
		}
		public List<TerminalNode> NUMBER_RANGE() { return getTokens(regex2englishParser.NUMBER_RANGE); }
		public TerminalNode NUMBER_RANGE(int i) {
			return getToken(regex2englishParser.NUMBER_RANGE, i);
		}
		public List<TerminalNode> LETTER() { return getTokens(regex2englishParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(regex2englishParser.LETTER, i);
		}
		public List<TerminalNode> EXTRA_LETTER_ALLOWED_INSIDE() { return getTokens(regex2englishParser.EXTRA_LETTER_ALLOWED_INSIDE); }
		public TerminalNode EXTRA_LETTER_ALLOWED_INSIDE(int i) {
			return getToken(regex2englishParser.EXTRA_LETTER_ALLOWED_INSIDE, i);
		}
		public CharacterClassContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_characterClassContent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regex2englishVisitor ) return ((regex2englishVisitor<? extends T>)visitor).visitCharacterClassContent(this);
			else return visitor.visitChildren(this);
		}
	}
